--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>G-Stone Rock Festival</title>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="CSS-Stylesheet-General.css">
         <link rel="stylesheet" href="CSS-Stylesheet-Startseite.css">
         <link rel="stylesheet" href="CSS-Stylesheet-Infos.css">
