--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                     <h3 class="bebas-rounded datum-header-tag">31.07.-02.08.</h3>
                 </div>
             </div>
-            <a class="bebas-rounded menü-elemente" href="#Line-up-tickets">Tickets</a>
-            <a class="bebas-rounded menü-elemente" href="#Line-up-tickets">LineUp</a>
+            <a class="bebas-rounded menü-elemente" href="#Tickets">Tickets</a>
+            <a class="bebas-rounded menü-elemente" href="#Line-Up">LineUp</a>
             <a class="bebas-rounded menü-elemente" href="index.html">Camping</a>
             <div class="burger-menü">
                 <button class="burger-menü-button"><svg class="burger-menü-button" xmlns="http://www.w3.org/2000/svg" width="49.999" height="37.999" viewBox="0 0 49.999 37.999"><g transform="translate(-1706 -31)"><path d="M-8736-115a4,4,0,0,1-4-4,4,4,0,0,1,4-4h42a4,4,0,0,1,4,4,4,4,0,0,1-4,4Zm0-15a4,4,0,0,1-4-4,4,4,0,0,1,4-4h42a4,4,0,0,1,4,4,4,4,0,0,1-4,4Zm0-15a4,4,0,0,1-4-4,4,4,0,0,1,4-4h42a4,4,0,0,1,4,4,4,4,0,0,1-4,4Z" transform="translate(10446 184)"/></g></svg></button>
@@ -48,7 +48,7 @@
                     Das G-Stone Rock Festival ist ein mehrtägiges Musikfestival am Gasteiner Badesee, das lokaler Rock-Musik aus Salzburg eine Bühne bietet. Live-Musik mit Camping in der malerischen Gasteiner Alpenkulisse, umgeben von Natur, Wanderwegen mit guter Verkehrsanbindung. Es bietet zudem einen starken Fokus auf Nachhaltigkeit und ein vielfältiges veganes Gastronomieangebot.
                 </p>
                 <div title="Buttons" class="startseite-buttons-container bebas-rounded yellow">
-                    <a title="Tickets" href="#Line-up-tickets" class="gefüllter-button-lila">
+                    <a title="Tickets" href="#Tickets" class="gefüllter-button-lila">
                         Tickets
                     </a>
                     <a title="Mehr Infos" href="#infos" class="rahmen-button-lila">
