--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
                         <a class="heading-font main-color-2 bandname">Hay Fever</a>
                     </div>
                     <div class="band band-side band-r">
-                        <img src="Images/Bilder-Bands/main-color-2-Furniture.jpg" alt="Foto der Band main-color-2 Furniture" class="band-foto">
-                        <a class="heading-font main-color-2 bandname-zulang">main-color-2-Furniture</a>
+                        <img src="Images/Bilder-Bands/Yellow-Furniture.jpg" alt="Foto der Band main-color-2 Furniture" class="band-foto">
+                        <a class="heading-font main-color-2 bandname-zulang">Yellow-Furniture</a>
                     </div>
                     <div class="band band-hidden">
                         <img src="Images/Bilder-Bands/DJI_0003.JPG" alt="Foto der Band ..." class="band-foto">
