--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                     </svg>
                 </div>
                 <div class="partner-logo-reihe">
-                    <img class="partner-logo-item" alt="Sponsoren-Logo" src="Images/Sponsoring-Logos/GasteinerLogo_cmyk_2017.webp">
+                    <img class="partner-logo-item" alt="Sponsoren-Logo" src="Images/Sponsoring-Logos/Example_Logo.png">
                     <img class="partner-logo-item" alt="Sponsoren-Logo" src="Images/Sponsoring-Logos/lechner-logo.webp">
                     <img class="partner-logo-item" alt="Sponsoren-Logo" src="Images/Sponsoring-Logos/logo-fab12426-8813-4339-ab41-fcd6c524700e--medium.png">
                     <img class="partner-logo-item" alt="Sponsoren-Logo" src="Images/Sponsoring-Logos/salzburgerLand.svg">
