--- a/index.html
+++ b/index.html
@@ -62,6 +62,11 @@
                 <h2 class="logo-font datum-1">2025</h2>
                 <h3 class="heading-font datum-2">31.07.-02.08.</h3>
             </div>
+            <script>
+            console.log("Script is running");
+            alert("Diese Website ist ein Prototyp. Einige Informationen können sich noch ändern oder werden erst hinzugefügt");
+
+            </script>
         </main>
         <section title="Info" class="info" id="infos">
             <div class="carousel-container">
