--- a/index.html
+++ b/index.html
@@ -63,9 +63,11 @@
                 <h3 class="heading-font datum-2">31.07.-02.08.</h3>
             </div>
             <script>
+                 window.onload = function() {
+                    alert("Diese Website ist ein Prototyp. Einige Informationen können sich noch ändern oder werden erst hinzugefügt");
+                };
             console.log("Script is running");
-            alert("Diese Website ist ein Prototyp. Einige Informationen können sich noch ändern oder werden erst hinzugefügt");
-
+           
             </script>
         </main>
         <section title="Info" class="info" id="infos">
