--- a/FAQ.html
+++ b/FAQ.html
@@ -3,6 +3,7 @@
     <head>
         <title>G-Stone Rock Festival</title>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="CSS-Stylesheet-General.css">
         <link rel="stylesheet" href="CSS-Stylesheet-Startseite.css">
         <link rel="stylesheet" href="CSS-Stylesheet-Infos.css">
@@ -46,7 +47,7 @@
                     <h2 class="burghi datum-1">2025</h2>
                     <h3 class="bebas-rounded datum-2">31.07.-02.08.</h3>
                 </div>
-                <h3 class="bebas-rounded purple">Frequently Asked Questions</h3>
+                <h4 class="bebas-rounded purple">Frequently Asked Questions</h4>
             </div>
         </section>
         <main title="FAQ" class="faq">
