--- a/index.html
+++ b/index.html
@@ -132,16 +132,16 @@
             <div title="Tickets" class="tickets-container" id="Tickets">
                 <h1 class="heading-font main-color-2 tickets-überschrift">Tickets</h1>
                 <div class="preis-und-button">
-                    <h2 class="heading-font main-color-2 tickets-angebote">Early Bird Tickets</h2>
-                    <a class="heading-font main-color-2 rahmen-button-gelb tickets-preise-button">-50€</a>
+                    <h2 class="heading-font main-color-2 tickets-angebote">Blind Bird Tickets</h2>
+                    <a class="heading-font main-color-2 rahmen-button-gelb tickets-preise-button Keinverweis">-50€</a>
                 </div>
                 <div class="preis-und-button">
                     <h2 class="heading-font main-color-2 tickets-angebote">Tages-Ticket</h2>
-                    <a class="heading-font main-color-2 rahmen-button-gelb tickets-preise-button">-25€</a>
+                    <a class="heading-font main-color-2 rahmen-button-gelb tickets-preise-button Keinverweis">-25€</a>
                 </div>
                 <div class="preis-und-button">
                     <h2 class="heading-font main-color-2 tickets-angebote">Camping-Extra</h2>
-                    <a class="heading-font main-color-2 rahmen-button-gelb tickets-preise-button">-10€</a>
+                    <a class="heading-font main-color-2 rahmen-button-gelb tickets-preise-button Keinverweis">-10€</a>
                 </div>
             </div>
         </section>
