Falling High hinzugefügt

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             <script src="Carousel-Skript.js"></script>
         </section>
         <section title="Line-Up & Tickets" class="line-up-tickets">
-            <img src="Images/Bilder-Tickets-Line-Up/Plakat-Ver2_page-0001.jpg" alt="Plakat mit Line-Up" class="plakat-line-up" id="Line-Up">
+            <img src="Images/Bilder-Tickets-Line-Up/Plakat Blur.png" alt="Plakat mit Line-Up" class="plakat-line-up" id="Line-Up">
             <div title="Tickets" class="tickets-container" id="Tickets">
                 <h1 class="heading-font main-color-2 tickets-überschrift">Tickets</h1>
                 <div class="preis-und-button">
@@ -151,6 +151,10 @@
                     fill="#F5BD00"><path d="M640-80 240-480l400-400 71 71-329 329 329 329-71 71Z"/></svg>
                 </a>
                 <div class="bands-carousel-item-track">
+                    <div class="band band-side band-l">
+                        <img src="Images/Bilder-Bands/fallinghigh.jpg" alt="Foto der Band Falling High" class="band-foto">
+                        <a class="heading-font main-color-2 bandname">Falling High</a>
+                    </div>
                     <div class="band band-side band-ml">
                         <img src="Images/Bilder-Bands/AHARA.jpg" alt="Foto der Band Ahara" class="band-foto">
                         <a class="heading-font main-color-2 bandname">Ahara</a>
@@ -167,9 +171,10 @@
                         <img src="Images/Bilder-Bands/Yellow-Furniture.jpg" alt="Foto der Band main-color-2 Furniture" class="band-foto">
                         <a class="heading-font main-color-2 bandname-zulang">Yellow-Furniture</a>
                     </div>
+                    
                     <div class="band band-hidden">
                         <img src="Images/LOGO/LOGO-Gelb.svg" alt="Foto der Band ..." class="band-foto">
-                        <a class="heading-font main-color-2 bandname">8 more Bands to be Announced</a>
+                        <a class="heading-font main-color-2 bandname">7 more Bands to be Announced</a>
                     </div>
                 </div>
                 <a class="bands-button-right"><svg xmlns="http://www.w3.org/2000/svg" height="40px" viewBox="0 -960 960 960" width="40px" 
