--- a/Anreise.html
+++ b/Anreise.html
@@ -14,6 +14,7 @@
         <link rel="stylesheet" href="CSS-Stylesheet-Impressum.css">
         <link rel="stylesheet" href="https://use.typekit.net/ytc1iqq.css">
         <link rel="stylesheet" href="CSS-Stylesheet-Startseite-Subpage.css">
+        <link rel="stylesheet" href="CSS-Stylesheet-Anreise.css">
     </head>
     <body>
         <header>
@@ -51,4 +52,13 @@
                 <h4 class="bebas-rounded purple">Anreise</h4>
             </div>
         </section>
+        <main title="Anreise" class="Anreise">
+            <div class="Anreise-Karte">
+                <div class="Buttons-Karte">
+                    <a title="Öffentliche Anreise" class="rahmen-button-gelb karte-button"href="#Öffentliche Anreise">Öffentliche Anreise</a>
+                    <a title="Private Anreise" class="rahmen-button-gelb karte-button" href="#Private Anreise">Private Anreise</a>
+                </div>  
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1413.7020730735826!2d13.121543080373263!3d47.14487827568095!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4777307399a84fdf%3A0x7e0dbdf761f729ba!2sGasteiner%20Badesee!5e0!3m2!1sde!2sus!4v1744649474568!5m2!1sde!2sus" width="600" height="450" max-width="95vw"; style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+        </main>
     </body>
