Anreise Öffentliche Anreise

--- a/Anreise.html
+++ b/Anreise.html
@@ -55,10 +55,45 @@
         <main title="Anreise" class="Anreise">
             <div class="Anreise-Karte">
                 <div class="Buttons-Karte">
-                    <a title="Öffentliche Anreise" class="rahmen-button-gelb karte-button"href="#Öffentliche Anreise">Öffentliche Anreise</a>
-                    <a title="Private Anreise" class="rahmen-button-gelb karte-button" href="#Private Anreise">Private Anreise</a>
+                    <a title="Öffentliche Anreise" class="rahmen-button-gelb karte-button"href="#Öffentliche-Anreise">Öffentliche Anreise</a>
+                    <a title="Private Anreise" class="rahmen-button-gelb karte-button" href="#Private-Anreise">Private Anreise</a>
                 </div>  
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1413.7020730735826!2d13.121543080373263!3d47.14487827568095!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4777307399a84fdf%3A0x7e0dbdf761f729ba!2sGasteiner%20Badesee!5e0!3m2!1sde!2sus!4v1744649474568!5m2!1sde!2sus" width="600" height="450" max-width="95vw"; style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1413.7020730735826!2d13.121543080373263!3d47.14487827568095!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4777307399a84fdf%3A0x7e0dbdf761f729ba!2sGasteiner%20Badesee!5e0!3m2!1sde!2sus!4v1744649474568!5m2!1sde!2sus" 
+                style="border:0;" class="Karte"
+                allowfullscreen="" loading="lazy" 
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </main>
+        <section id="Öffentliche-Anreise" class="Öffentliche-Anreise">
+            <h4 class="heading-font purple">Öffentliche Anreise</h4>
+            <p class="text-font purple">Das G-Stone-Rock Festival ist sehr gut mit öffentlichen Verkehrsmitteln zu erreichen. Die näheste Bushaltestelle ist nur wenige Meter vom Festival-Gelande entfernt und bietet direkte Verbindung zu den Bahnhöfen |Bad Hofgastein| und |Bad Gastein|, die beide mit dem schnellen Railjet der ÖBB angefahren warden.</p>
+            <div class="Öffentliche-Anreise-Bahnhöfe">
+                <div class="Öffentliche-Anreise-Bahnhof">
+                    <h4 class="heading-font purple">Von Bahnhof Bad Hofgastein</h4>
+                    <p class="text-font purple">
+                        Bahnhof |Bad Hofgastein|: <br />
+                        Bus Linie 550 Richtung: |Sportgastein| <br />
+                        Haltestelle ca. 5 Gehminuten vom Bahnhof: <br />
+                        |Bad Hofgastein Abzw Bahnhof| <br />
+                        bis: |Bad Hofgastein Bertahof/Badesee| <br />
+                        Erster Bus: 06:13 Uhr <br />
+                        Letzter Bus: 21:36 Uhr <br />
+                        Takt: Alle 30 Minuten <br />
+                        </p>
+                </div>
+                <div class="Öffentliche-Anreise-Bahnhof">
+                    <h4 class="heading-font purple">Von Bahnhof Bad Gastein</h4>
+                    <p class="text-font purple">
+                        Bahnhof |Bad Gastein|: <br />
+                        Bus Linie 550 Richtung: |Schwarzach| <br />
+                        Haltestelle direct vor dem Bahnhof: <br />
+                        |Bad Gastein Bahnhof| <br />
+                        bis: |Bad Hofgastein Bertahof/Badesee| <br />
+                        Erster Bus: 04:47 Uhr <br />
+                        Letzter Bus: 21:05 Uhr <br />
+                        Takt: Alle 30 Minuten <br />
+                        </p>
+                </div>
+            </div>
+        </section>
     </body>
