--- a/Terms.html
+++ b/Terms.html
@@ -33,7 +33,7 @@
                 <button class="burger-menü-button"><svg class="burger-menü-button" xmlns="http://www.w3.org/2000/svg" width="49.999" height="37.999" viewBox="0 0 49.999 37.999"><g transform="translate(-1706 -31)"><path d="M-8736-115a4,4,0,0,1-4-4,4,4,0,0,1,4-4h42a4,4,0,0,1,4,4,4,4,0,0,1-4,4Zm0-15a4,4,0,0,1-4-4,4,4,0,0,1,4-4h42a4,4,0,0,1,4,4,4,4,0,0,1-4,4Zm0-15a4,4,0,0,1-4-4,4,4,0,0,1,4-4h42a4,4,0,0,1,4,4,4,4,0,0,1-4,4Z" transform="translate(10446 184)"/></g></svg></button>
                 <nav class="dropdown-menu">
                     <a href="index.html#infos" class="dropdown-item bebas-rounded purple">Info</a>
-                    <a href="." class="dropdown-item bebas-rounded purple Keinverweis">Anreise</a>
+                    <a href="Anreise.html" class="dropdown-item bebas-rounded purple Keinverweis">Anreise</a>
                     <a href="." class="dropdown-item bebas-rounded purple Keinverweis">Parken</a>
                     <a href="FAQ.html" class="dropdown-item bebas-rounded purple">FAQ</a>
                     <a href="Terms.html" class="dropdown-item bebas-rounded purple aktuell-ausgewählt-terms">Terms</a>
