Zeltwiese angelegt Links im Header bei den meisten seiten fertig

--- a/Anreise.html
+++ b/Anreise.html
@@ -25,17 +25,17 @@
                     <h3 class="heading-font datum-header-tag">31.07.-02.08.</h3>
                 </div>
             </div>
-            <a class="heading-font menü-elemente" href="#Tickets">Tickets</a>
-            <a class="heading-font menü-elemente" href="#Line-Up">LineUp</a>
-            <a class="heading-font menü-elemente" href="index.html">Camping</a>
+            <a class="heading-font menü-elemente" href="index.html#Tickets">Tickets</a>
+            <a class="heading-font menü-elemente" href="index.html#Line-Up">LineUp</a>
+            <a class="heading-font menü-elemente" href="Zeltwiese.html">Zeltwiese</a>
             <div class="burger-menü">
                 <button class="burger-menü-button"><svg class="burger-menü-button" xmlns="http://www.w3.org/2000/svg" width="49.999" height="37.999" viewBox="0 0 49.999 37.999"><g transform="translate(-1706 -31)"><path d="M-8736-115a4,4,0,0,1-4-4,4,4,0,0,1,4-4h42a4,4,0,0,1,4,4,4,4,0,0,1-4,4Zm0-15a4,4,0,0,1-4-4,4,4,0,0,1,4-4h42a4,4,0,0,1,4,4,4,4,0,0,1-4,4Zm0-15a4,4,0,0,1-4-4,4,4,0,0,1,4-4h42a4,4,0,0,1,4,4,4,4,0,0,1-4,4Z" transform="translate(10446 184)"/></g></svg></button>
                 <nav class="dropdown-menu">
                     <a href="#Tickets" class="dropdown-item heading-font main-color-1 dropdown-extra">Tickets</a>
                     <a href="#Line-Up" class="dropdown-item heading-font main-color-1 dropdown-extra">Line-Up</a>
-                    <a href="" class="dropdown-item heading-font main-color-1 dropdown-extra Keinverweis">Camping</a>
+                    <a href="Zeltwiese.html" class="dropdown-item heading-font main-color-1 dropdown-extra Keinverweis">Zeltwiese</a>
                     <a href="#infos" class="dropdown-item heading-font main-color-1">Info</a>
-                    <a href="" class="dropdown-item heading-font main-color-1 Keinverweis">Parken</a>
+                    <a href="#Private-Anreise" class="dropdown-item heading-font main-color-1 Keinverweis">Parken</a>
                     <a href="FAQ.html" class="dropdown-item heading-font main-color-1">FAQ</a>
                     <a href="Terms.html" class="dropdown-item heading-font main-color-1">Terms</a>
                     <a href="#impressum" class="dropdown-item heading-font main-color-1">Impressum</a>
@@ -49,7 +49,7 @@
                     <h2 class="burghi datum-1">2025</h2>
                     <h3 class="bebas-rounded datum-2">31.07.-02.08.</h3>
                 </div>
-                <h3 class="bebas-rounded purple">Anreise</h4>
+                <h3 class="bebas-rounded purple">Anreise & Parken</h4>
             </div>
         </section>
         <main title="Anreise" class="Anreise">
@@ -57,7 +57,7 @@
                 <div class="Buttons-Karte">
                     <a title="Öffentliche Anreise" class="rahmen-button-gelb karte-button"href="#Öffentliche-Anreise">Öffentliche Anreise</a>
                     <a title="Private Anreise" class="rahmen-button-gelb karte-button" href="#Private-Anreise">Private Anreise</a>
-                </div>  
+                </div>
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1413.7020730735826!2d13.121543080373263!3d47.14487827568095!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4777307399a84fdf%3A0x7e0dbdf761f729ba!2sGasteiner%20Badesee!5e0!3m2!1sde!2sus!4v1744649474568!5m2!1sde!2sus" 
                 style="border:0;" class="Karte"
                 allowfullscreen="" loading="lazy" 
@@ -66,43 +66,51 @@
         </main>
         <section id="Öffentliche-Anreise" class="Öffentliche-Anreise">
             <h4 class="heading-font purple">Öffentliche Anreise</h4>
-            <p class="text-font purple">Das G-Stone-Rock Festival ist sehr gut mit öffentlichen Verkehrsmitteln zu erreichen. Die näheste Bushaltestelle ist nur wenige Meter vom Festival-Gelande entfernt und bietet direkte Verbindung zu den Bahnhöfen |Bad Hofgastein| und |Bad Gastein|, die beide mit dem schnellen Railjet der ÖBB angefahren warden.</p>
+            <p class="text-font purple">
+                Das G-Stone Rock Festival ist bequem mit öffentlichen Verkehrsmitteln erreichbar. Die nächstgelegene Bushaltestelle befindet sich nur wenige Gehminuten vom 
+                Festivalgelände entfernt und bietet direkte Verbindungen zu den Bahnhöfen <b>Bad Hofgastein</b> und <b>Bad Gastein</b>, welche regelmäßig vom ÖBB-Railjet angefahren werden.
+                <br />
+                Weitere Informationen zu den Fahrplänen und Verbindungen finden Sie auf der Website der ÖBB: <br />
+                <b>Zielstation: Bad Hofgastein Bertahof/Badesee</b> <br />
+                <a href="https://www.oebb.at/de/" target="_blank" style="text-decoration: none" class="bebas-neue purple">https://www.oebb.at/de/</a> <br />
+            </p>
             <div class="Öffentliche-Anreise-Bahnhöfe">
                 <div class="Öffentliche-Anreise-Bahnhof">
                     <h4 class="heading-font purple">Von Bahnhof Bad Hofgastein</h4>
                     <p class="text-font purple">
-                        Bahnhof |Bad Hofgastein|: <br />
-                        Bus Linie 550 Richtung: |Sportgastein| <br />
-                        Haltestelle ca. 5 Gehminuten vom Bahnhof: <br />
-                        |Bad Hofgastein Abzw Bahnhof| <br />
-                        bis: |Bad Hofgastein Bertahof/Badesee| <br />
-                        Erster Bus: 06:13 Uhr <br />
-                        Letzter Bus: 21:36 Uhr <br />
-                        Takt: Alle 30 Minuten <br />
+                        <b>Buslinie</b>: 550 Richtung Sportgastein<br />
+                        <b>Abfahrt</b>: Haltestelle Bad Hofgastein Abzw Bahnhof <br />
+                        (ca. 5 Gehminuten vom Bahnhof)<br />
+                       <b> Ziel</b>: Bad Hofgastein Bertahof/Badesee<br />
+                        <b>Betriebszeiten</b>: 06:13 – 21:36 Uhr<br />
+                        <b>Frequenz</b>: alle 30 Minuten<br />
                         </p>
                 </div>
                 <div class="Öffentliche-Anreise-Bahnhof">
                     <h4 class="heading-font purple">Von Bahnhof Bad Gastein</h4>
                     <p class="text-font purple">
-                        Bahnhof |Bad Gastein|: <br />
-                        Bus Linie 550 Richtung: |Schwarzach| <br />
-                        Haltestelle direct vor dem Bahnhof: <br />
-                        |Bad Gastein Bahnhof| <br />
-                        bis: |Bad Hofgastein Bertahof/Badesee| <br />
-                        Erster Bus: 04:47 Uhr <br />
-                        Letzter Bus: 21:05 Uhr <br />
-                        Takt: Alle 30 Minuten <br />
-                        </p>
+                        <strong>Buslinie:</strong> 550 Richtung Schwarzach<br>
+                        <strong>Abfahrt:</strong> Direkt ab Haltestelle "Bad Gastein Bahnhof"<br>
+                        <strong>Ziel:</strong> "Bad Hofgastein Bertahof/Badesee"<br>
+                        <strong>Betriebszeiten:</strong> 04:47 – 21:05 Uhr<br>
+                        <strong>Frequenz:</strong> alle 30 Minuten
+                    </p>
                 </div>
             </div>
         </section>
         <section id="Private-Anreise" class="Private-Anreise">
-            <h4 class="heading-font yellow">Anreise mit dem Auto</h4>
-            <p class="text-font yellow">Das GasteinerTal ist mit dem Auto sehr gut erreichbar. Aus dem Süden kommend empfehlen wir die Tauernschleuse in erwägung zu ziehen: <br />
-                https://www.oebb.at/de/regionale-angebote/kaernten/autoschleuse-tauernbahn <br />
-                Das gesamte GasteinerTal sowie auch das Festival-Gelände ist über die Gasteiner Bundesstraße gut verbunden.</p>
-            <h4 class="heading-font yellow Parken">Parken</h4>
-            <p class="text-font yellow">In unmittelbarer Nähe zum Festival-Gelände gibt es 2 Möglichkeiten zu Parken. Beide Parkplätze sind nahe des Gasteiner Badesee´s beschildert. Weitere Infos unter: <a title="Link zu Parken" class="Keinverweis bebas-neue yellow" href="" style="text-decoration: none;">Parken</a>.</p>
+            <h4 class="heading-font yellow Überschrift-Anreise">Anreise mit dem Auto</h4>
+            <p class="text-font yellow">Das Gasteinertal ist gut mit dem Auto erreichbar. Für Anreisende aus dem Süden empfiehlt sich die Nutzung der ÖBB-Autoschleuse durch den Tauerntunnel.
+                Weitere Informationen finden Sie unter: <br />
+                <a href="https://www.oebb.at/de/regionale-angebote/kaernten/autoschleuse-tauernbahn" target="_blank" class="bebas-neue yellow" style="text-decoration: none">https://www.oebb.at/de/regionale-angebote/kaernten/autoschleuse-tauernbahn</a> <br />
+                
+                Das Festivalgelände ist über die Gasteiner Bundesstraße direkt erreichbar.</p>
+            <h4 class="heading-font yellow">Parken</h4>
+            <p class="text-font yellow">In unmittelbarer Nähe des Festivalgeländes stehen zwei beschilderte Parkplätze zur Verfügung. Beide befinden sich in der Nähe des Gasteiner Badesees.</p>
+            <h4 class="heading-font yellow">Location</h4>
+            <p class="text-font yellow">Gasteiner Badesee</p> 
+            <h4 class="heading-font yellow">Adresse</h4>
+            <p class="text-font yellow">Vorderschneeberg 144, 5630 Bad Hofgastein, Österreich</p>
         </section>
         <footer title="Impressum & Social">
             <div class="footer-flex-container">
