--- a/FAQ.html
+++ b/FAQ.html
@@ -25,18 +25,18 @@
                     <h3 class="heading-font datum-header-tag">31.07.-02.08.</h3>
                 </div>
             </div>
-            <a class="heading-font menü-elemente" href="#Tickets">Tickets</a>
-            <a class="heading-font menü-elemente" href="#Line-Up">LineUp</a>
-            <a class="heading-font menü-elemente" href="index.html">Camping</a>
+            <a class="heading-font menü-elemente" href="index.html#Tickets">Tickets</a>
+            <a class="heading-font menü-elemente" href="index.html#Line-Up">LineUp</a>
+            <a class="heading-font menü-elemente" href="Zeltwiese.html">Zeltwiese</a>
             <div class="burger-menü">
                 <button class="burger-menü-button"><svg class="burger-menü-button" xmlns="http://www.w3.org/2000/svg" width="49.999" height="37.999" viewBox="0 0 49.999 37.999"><g transform="translate(-1706 -31)"><path d="M-8736-115a4,4,0,0,1-4-4,4,4,0,0,1,4-4h42a4,4,0,0,1,4,4,4,4,0,0,1-4,4Zm0-15a4,4,0,0,1-4-4,4,4,0,0,1,4-4h42a4,4,0,0,1,4,4,4,4,0,0,1-4,4Zm0-15a4,4,0,0,1-4-4,4,4,0,0,1,4-4h42a4,4,0,0,1,4,4,4,4,0,0,1-4,4Z" transform="translate(10446 184)"/></g></svg></button>
                 <nav class="dropdown-menu">
-                    <a href="#Tickets" class="dropdown-item heading-font main-color-1 dropdown-extra">Tickets</a>
-                    <a href="#Line-Up" class="dropdown-item heading-font main-color-1 dropdown-extra">Line-Up</a>
-                    <a href="" class="dropdown-item heading-font main-color-1 dropdown-extra Keinverweis">Camping</a>
-                    <a href="#infos" class="dropdown-item heading-font main-color-1">Info</a>
+                    <a href="index.html#Tickets" class="dropdown-item heading-font main-color-1 dropdown-extra">Tickets</a>
+                    <a href="index.html#Line-Up" class="dropdown-item heading-font main-color-1 dropdown-extra">Line-Up</a>
+                    <a href="Zeltwiese.html" class="dropdown-item heading-font main-color-1 dropdown-extra Keinverweis">Zeltwiese</a>
+                    <a href="index.html#infos" class="dropdown-item heading-font main-color-1">Info</a>
                     <a href="Anreise.html" class="dropdown-item heading-font main-color-1">Anreise</a>
-                    <a href="" class="dropdown-item heading-font main-color-1 Keinverweis">Parken</a>
+                    <a href="Anreise.html" class="dropdown-item heading-font main-color-1 Keinverweis">Parken</a>
                     <a href="Terms.html" class="dropdown-item heading-font main-color-1">Terms</a>
                     <a href="#impressum" class="dropdown-item heading-font main-color-1">Impressum</a>
                 </nav>
