--- a/Terms.html
+++ b/Terms.html
@@ -22,38 +22,26 @@
             <div class="logo-und-datum">
                 <a href="index.html"><img src="Images/LOGO/LOGO-Lila.svg" class="logo-header" alt="G-Stone Rock Logo"></a>
                 <div title="Datum" class="datum-header">
-                    <h2 class="burghi datum-header-jahr">2025</h2>
-                    <h3 class="bebas-rounded datum-header-tag">31.07.-02.08.</h3>
+                    <h2 class="logo-font datum-header-jahr">2025</h2>
+                    <h3 class="heading-font datum-header-tag">31.07.-02.08.</h3>
                 </div>
             </div>
-            <a class="bebas-rounded menü-elemente" href="#Line-up-tickets">Tickets</a>
-            <a class="bebas-rounded menü-elemente" href="#Line-up-tickets">LineUp</a>
-            <a class="bebas-rounded menü-elemente" href="index.html">Camping</a>
+            <a class="heading-font menü-elemente" href="index.html#Tickets">Tickets</a>
+            <a class="heading-font menü-elemente" href="index.html#Line-Up">LineUp</a>
+            <a class="heading-font menü-elemente" href="Zeltwiese.html">Zeltwiese</a>
             <div class="burger-menü">
                 <button class="burger-menü-button"><svg class="burger-menü-button" xmlns="http://www.w3.org/2000/svg" width="49.999" height="37.999" viewBox="0 0 49.999 37.999"><g transform="translate(-1706 -31)"><path d="M-8736-115a4,4,0,0,1-4-4,4,4,0,0,1,4-4h42a4,4,0,0,1,4,4,4,4,0,0,1-4,4Zm0-15a4,4,0,0,1-4-4,4,4,0,0,1,4-4h42a4,4,0,0,1,4,4,4,4,0,0,1-4,4Zm0-15a4,4,0,0,1-4-4,4,4,0,0,1,4-4h42a4,4,0,0,1,4,4,4,4,0,0,1-4,4Z" transform="translate(10446 184)"/></g></svg></button>
                 <nav class="dropdown-menu">
-                    <a href="index.html#infos" class="dropdown-item bebas-rounded purple">Info</a>
-                    <a href="Anreise.html" class="dropdown-item bebas-rounded purple Keinverweis">Anreise</a>
-                    <a href="." class="dropdown-item bebas-rounded purple Keinverweis">Parken</a>
-                    <a href="FAQ.html" class="dropdown-item bebas-rounded purple">FAQ</a>
-                    <a href="Terms.html" class="dropdown-item bebas-rounded purple aktuell-ausgewählt-terms">Terms</a>
-                    <a href="#impressum" class="dropdown-item bebas-rounded purple">Impressum</a>
+                    <a href="index.html#Tickets" class="dropdown-item heading-font main-color-1 dropdown-extra">Tickets</a>
+                    <a href="index.html#Line-Up" class="dropdown-item heading-font main-color-1 dropdown-extra">Line-Up</a>
+                    <a href="Zeltwiese.html" class="dropdown-item heading-font main-color-1 dropdown-extra">Zeltwiese</a>
+                    <a href="index.html#infos" class="dropdown-item heading-font main-color-1">Info</a>
+                    <a href="Anreise.html" class="dropdown-item heading-font main-color-1">Anreise</a>
+                    <a href="Anreise.html" class="dropdown-item heading-font main-color-1">Parken</a>
+                    <a href="FAQ.html" class="dropdown-item heading-font main-color-1">FAQ</a>
+                    <a href="#impressum" class="dropdown-item heading-font main-color-1">Impressum</a>
                 </nav>
             </div>
-            <script>
-                window.onload = function() {
-                   alert("Diese Website ist ein Prototyp. Einige Informationen können sich noch ändern oder werden erst hinzugefügt");
-                   };
-                   
-                   document.addEventListener("DOMContentLoaded", () => {
-                   document.querySelectorAll('.Keinverweis').forEach(item => {
-                   item.addEventListener('click', (event) => {
-                   event.preventDefault(); // Verhindert mögliche Standardaktionen
-                    alert('Diese Seite ist noch nicht verfügbar!');
-           });
-       });
-   });
-</script>
         </header> 
         <section id="startseite-subpages-terms" title="Startseite-Subpages" class="startseite-subpages">
             <div class="startseite-subpages-flex-container">
