--- a/index.html
+++ b/index.html
@@ -25,16 +25,16 @@
             </div>
             <a class="heading-font menü-elemente" href="#Tickets">Tickets</a>
             <a class="heading-font menü-elemente" href="#Line-Up">LineUp</a>
-            <a class="heading-font menü-elemente" href="index.html">Camping</a>
+            <a class="heading-font menü-elemente" href="Zeltwiese.html">Zeltwiese</a>
             <div class="burger-menü">
                 <button class="burger-menü-button"><svg class="burger-menü-button" xmlns="http://www.w3.org/2000/svg" width="49.999" height="37.999" viewBox="0 0 49.999 37.999"><g transform="translate(-1706 -31)"><path d="M-8736-115a4,4,0,0,1-4-4,4,4,0,0,1,4-4h42a4,4,0,0,1,4,4,4,4,0,0,1-4,4Zm0-15a4,4,0,0,1-4-4,4,4,0,0,1,4-4h42a4,4,0,0,1,4,4,4,4,0,0,1-4,4Zm0-15a4,4,0,0,1-4-4,4,4,0,0,1,4-4h42a4,4,0,0,1,4,4,4,4,0,0,1-4,4Z" transform="translate(10446 184)"/></g></svg></button>
                 <nav class="dropdown-menu">
                     <a href="#Tickets" class="dropdown-item heading-font main-color-1 dropdown-extra">Tickets</a>
                     <a href="#Line-Up" class="dropdown-item heading-font main-color-1 dropdown-extra">Line-Up</a>
-                    <a href="" class="dropdown-item heading-font main-color-1 dropdown-extra Keinverweis">Camping</a>
+                    <a href="Zeltwiese.html" class="dropdown-item heading-font main-color-1 dropdown-extra">Zeltwiese</a>
                     <a href="#infos" class="dropdown-item heading-font main-color-1">Info</a>
                     <a href="Anreise.html" class="dropdown-item heading-font main-color-1">Anreise</a>
-                    <a href="" class="dropdown-item heading-font main-color-1 Keinverweis">Parken</a>
+                    <a href="Anreise.html" class="dropdown-item heading-font main-color-1">Parken</a>
                     <a href="FAQ.html" class="dropdown-item heading-font main-color-1">FAQ</a>
                     <a href="Terms.html" class="dropdown-item heading-font main-color-1">Terms</a>
                     <a href="#impressum" class="dropdown-item heading-font main-color-1">Impressum</a>
@@ -188,12 +188,12 @@
                 <img alt="Lageplan" src="Images/Bilder-Camping/Lageplan.jpg" class="lageplan-bild">
                 <div title="Buttons" class="lageplan-buttons">
                     <a title="Camping" href="index.html" class="rahmen-button-lila lageplan-button">
-                        Camping
+                        Zeltwiese
                     </a>
-                    <a title="Anreise" href="index.html" class="rahmen-button-lila lageplan-button">
+                    <a title="Anreise" href="Anreise.html" class="rahmen-button-lila lageplan-button">
                         Anreise
                     </a>
-                    <a title="Parken" href="index.html" class="rahmen-button-lila lageplan-button">
+                    <a title="Parken" href="Anreise.html#Private-Anreise" class="rahmen-button-lila lageplan-button">
                         Parken
                     </a>
                     <a title="FAQ" href="FAQ.html" class="rahmen-button-lila lageplan-button">
