--- a/Anreise.html
+++ b/Anreise.html
@@ -117,19 +117,19 @@
                 <div title="Impressum" class="impressum" id="impressum">
                     <h4 class="text-font">Impressum</h4>
                     <ul>
-                        <li class="impressum-items text-font p">Kunstverein Rote Brennessel</li>
-                        <li class="impressum-items text-font p">Vorderschneeberg 144, 5630 Bad Hofgastein, Austria</li>
-                        <li class="impressum-items text-font p">06803127774</li>
-                        <li class="impressum-items text-font p">organisation@gstonerock.at</li>
-                        <li class="impressum-items text-font p">Firmenbuchnummer & Firmenbuchgericht</li>
-                        <li class="impressum-items text-font p">Zuständige Aufsichtsbehörde</li>
-                        <li class="impressum-items text-font p">Zugehörige Kammer</li>
-                        <li class="impressum-items text-font p">Berufsbezeichnung und Mitgliedsstaat</li>
-                        <li class="impressum-items text-font p">Hinweis auf gewerbliche oder berufsrechtliche Vorschriften</li>
-                        <li class="impressum-items text-font p">UID</li>
-                        <li class="impressum-items text-font p">Vorderschneeberg 144, 5630 Bad Hofgastein, Austria</li>
-                        <li class="impressum-items text-font p">Wir haften nicht für Inhalte auf externen Links.</li>
-                        <li class="impressum-items text-font p">Wir behalten uns das Recht vor Änderungen an Ticket Preisen und dem Programm vorzunehmen.</li>
+                        <li class="impressum-items text-font" style="margin-top: +2vh;">Kunstverein Rote Brennessel</li>
+                        <li class="impressum-items text-font">Vorderschneeberg 144, 5630 Bad Hofgastein, Austria</li>  
+                        <li class="impressum-items text-font">06803127774</li>
+                        <li class="impressum-items text-font">organisation@gstonerock.at</li>
+                        <li class="impressum-items text-font" style="display: none">Firmenbuchnummer & Firmenbuchgericht</li>
+                        <li class="impressum-items text-font" style="display: none">Zuständige Aufsichtsbehörde</li>
+                        <li class="impressum-items text-font" style="display: none">Zugehörige Kammer</li>
+                        <li class="impressum-items text-font" style="display: none">Berufsbezeichnung und Mitgliedsstaat</li>
+                        <li class="impressum-items text-font" style="display: none">Hinweis auf gewerbliche oder berufsrechtliche Vorschriften</li>
+                        <li class="impressum-items text-font" style="display: none">UID</li>
+                        <li class="impressum-items text-font">Vorderschneeberg 144, 5630 Bad Hofgastein, Austria</li>
+                        <li class="impressum-items text-font" style="margin-top: +2vh;">Wir haften nicht für Inhalte auf externen Links.</li>
+                        <li class="impressum-items text-font">Wir behalten uns das Recht vor Änderungen an Ticket Preisen und dem Programm vorzunehmen.</li>
                     </ul>
                 </div>
                 <div title="Social" class="social">
