--- a/FAQ.html
+++ b/FAQ.html
@@ -161,39 +161,39 @@
             </ul>
         </main>
 
-        <footer title="Impressum & Social" id="impressum">
+        <footer title="Impressum & Social">
             <div class="footer-flex-container">
-                <div title="Impressum" class="impressum">
-                    <h4 class="bebas-pro">Impressum</h4>
+                <div title="Impressum" class="impressum" id="impressum">
+                    <h4 class="text-font">Impressum</h4>
                     <ul>
-                        <li class="impressum-items bebas-pro">Namen des Vereins/des Betreibers</li>
-                        <li class="impressum-items bebas-pro">Geografische Anschrift</li>
-                        <li class="impressum-items bebas-pro">Tel d. Betreibers:</li>
-                        <li class="impressum-items bebas-pro">E-Mail:</li>
-                        <li class="impressum-items bebas-pro">Firmenbuchnummer & Firmenbuchgericht</li>
-                        <li class="impressum-items bebas-pro">Zuständige Aufsichtsbehörde</li>
-                        <li class="impressum-items bebas-pro">Zugehörige Kammer</li>
-                        <li class="impressum-items bebas-pro">Berufsbezeichnung und Mitgliedsstaat</li>
-                        <li class="impressum-items bebas-pro">Hinweis auf gewerbliche oder berufsrechtliche Vorschriften</li>
-                        <li class="impressum-items bebas-pro">UID</li>
-                        <li class="impressum-items bebas-pro">Standort derGewerbeberechtigung falls nicht im Firmenbuch eingetragen</li>
-                        <li class="impressum-items bebas-pro">Haftungsausschluss für externe Links</li>
-                        <li class="impressum-items bebas-pro">Hinweis bzgl. Änderungen von Programm und Preis</li>
+                        <li class="impressum-items text-font" style="margin-top: +2vh;">Kunstverein Rote Brennessel</li>
+                        <li class="impressum-items text-font">Vorderschneeberg 144, 5630 Bad Hofgastein, Austria</li>  
+                        <li class="impressum-items text-font">06803127774</li>
+                        <li class="impressum-items text-font">organisation@gstonerock.at</li>
+                        <li class="impressum-items text-font" style="display: none">Firmenbuchnummer & Firmenbuchgericht</li>
+                        <li class="impressum-items text-font" style="display: none">Zuständige Aufsichtsbehörde</li>
+                        <li class="impressum-items text-font" style="display: none">Zugehörige Kammer</li>
+                        <li class="impressum-items text-font" style="display: none">Berufsbezeichnung und Mitgliedsstaat</li>
+                        <li class="impressum-items text-font" style="display: none">Hinweis auf gewerbliche oder berufsrechtliche Vorschriften</li>
+                        <li class="impressum-items text-font" style="display: none">UID</li>
+                        <li class="impressum-items text-font">Vorderschneeberg 144, 5630 Bad Hofgastein, Austria</li>
+                        <li class="impressum-items text-font" style="margin-top: +2vh;">Wir haften nicht für Inhalte auf externen Links.</li>
+                        <li class="impressum-items text-font">Wir behalten uns das Recht vor Änderungen an Ticket Preisen und dem Programm vorzunehmen.</li>
                     </ul>
                 </div>
                 <div title="Social" class="social">
-                    <h4 class="bebas-pro">Folge uns:</h4>
+                    <h4 class="text-font">Folge uns:</h4>
                     <div class="social-links">
                         <a href="https://www.instagram.com/" target="_blank"><img alt="Instagram-Icon" src="Images/Icons/instagram_1384015.png" class="social-icons"></a>
-                        <p class="bebas-pro impressum-items">@G-Stone-Rock</p>
+                        <p class="text-font impressum-items">@G-Stone-Rock</p>
                     </div>
                     <div class="social-links">
                         <a href="https://www.facebook.com/" target="_blank"><img alt="Facebook-Icon" src="Images/Icons/facebook_2168281.png" class="social-icons"></a>
-                        <p class="bebas-pro impressum-items">G-Stone-Rock</p>
+                        <p class="text-font impressum-items">G-Stone-Rock</p>
                     </div>
                     <div class="social-links">
                         <a href="mailto:organisation@gstonerock.at" target="_blank"><img alt="E-Mail-Icon" src="Images/Icons/email_3178158.png" class="social-icons"></a>
-                        <p class="bebas-pro impressum-items">organisation@gstonerock.at</p>
+                        <p class="text-font impressum-items">organisation@gstonerock.at</p>
                     </div>
                 </div>
             </div>
