--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             </div>
             <script>
                  window.onload = function() {
-                    alert("Diese Website ist ein Prototyp. Einige Informationen können sich noch ändern oder werden erst hinzugefügt");
+                    alert("Wir behalten uns vor manche Informationen zu ändern. Das Festival findet vom 31.07.-02.08.2025 statt.");
                     };
                     
                     document.addEventListener("DOMContentLoaded", () => {
