--- a/index.html
+++ b/index.html
@@ -93,13 +93,13 @@
                         class="carousel-karte-bild" alt="2 Personen in Badekleidung stoßen an">
                         <h4 class="heading-font main-color-2 karte-überschrift">Aktivitäten</h4>
                         <p class=" text-font main-color-2 karte-text">Die Aktivitäten beim G-Stone Rock Festival bieten ein vielseitiges Erlebnis: Entspannte Stunden am Badesee oder Erkundungstouren in die umliegende Natur. Dank Kooperationen mit lokalen Betrieben erwartet dich ein abwechslungsreiches Zusatzprogramm.</p>
-                        <a title="Button Mehr Infos" class="rahmen-button-gelb karte-button">Mehr Infos</a>
+                        <a title="Button Mehr Infos" class="rahmen-button-gelb karte-button" onclick="alert('Diese Seite ist bald verfügbar')">Mehr Infos</a>
                     </div>
                     <div class="card main" title="Location">
                         <img src="Images/Bilder-Info-Karten/Nices-Badeseebild.jpg" class="carousel-karte-bild" alt="Bild des Gasteiner Badesees">
                         <h4 class="heading-font main-color-2 karte-überschrift">Location - Gasteiner Badesee</h4>
                         <p class="text-font main-color-2 karte-text">Der Gasteiner Badesee, umrahmt von Wäldern und den majestätischen Alpen, bietet die perfekte Festival-Location: Camping direkt am Wasser, atemberaubende Natur und eine unvergleichliche Atmosphäre machen dein Musikerlebnis unvergesslich!</p>
-                        <a title="Button Mehr Infos" class="rahmen-button-gelb karte-button">Mehr Infos</a>
+                        <a title="Button Mehr Infos" class="rahmen-button-gelb karte-button" href="https://www.gasteinertal.com/badesee/" target="_blank">Mehr Infos</a>
                     </div>
                     <div class="card side r">
                         <img src="Images/Bilder-Info-Karten/Gastronomie-Bild.jpg" 
@@ -132,7 +132,7 @@
             <div title="Tickets" class="tickets-container" id="Tickets">
                 <h1 class="heading-font main-color-2 tickets-überschrift">Tickets</h1>
                 <div class="preis-und-button">
-                    <h2 class="heading-font main-color-2 tickets-angebote">Blind Bird Tickets</h2>
+                    <h2 class="heading-font main-color-2 tickets-angebote">Festivalpass</h2>
                     <a class="heading-font main-color-2 rahmen-button-gelb tickets-preise-button Keinverweis">-50€</a>
                 </div>
                 <div class="preis-und-button">
@@ -140,7 +140,7 @@
                     <a class="heading-font main-color-2 rahmen-button-gelb tickets-preise-button Keinverweis">-25€</a>
                 </div>
                 <div class="preis-und-button">
-                    <h2 class="heading-font main-color-2 tickets-angebote">Camping-Extra</h2>
+                    <h2 class="heading-font main-color-2 tickets-angebote">Zeltwiese-Extra</h2>
                     <a class="heading-font main-color-2 rahmen-button-gelb tickets-preise-button Keinverweis">-10€</a>
                 </div>
             </div>
@@ -187,7 +187,7 @@
             <div class="lageplan-container">
                 <img alt="Lageplan" src="Images/Bilder-Camping/Lageplan.jpg" class="lageplan-bild">
                 <div title="Buttons" class="lageplan-buttons">
-                    <a title="Camping" href="index.html" class="rahmen-button-lila lageplan-button">
+                    <a title="Camping" href="Zeltwiese.html" class="rahmen-button-lila lageplan-button">
                         Zeltwiese
                     </a>
                     <a title="Anreise" href="Anreise.html" class="rahmen-button-lila lageplan-button">
