--- a/index.html
+++ b/index.html
@@ -257,8 +257,8 @@
                 <div title="Social" class="social">
                     <h4 class="text-font">Folge uns:</h4>
                     <div class="social-links">
-                        <a href="https://www.instagram.com/" target="_blank"><img alt="Instagram-Icon" src="Images/Icons/instagram_1384015.png" class="social-icons"></a>
-                        <p class="text-font impressum-items">@G-Stone-Rock</p>
+                        <a href="https://www.instagram.com/g_stone_rockfestival/" target="_blank"><img alt="Instagram-Icon" src="Images/Icons/instagram_1384015.png" class="social-icons"></a>
+                        <p class="text-font impressum-items">@g_stone_rockfestival</p>
                     </div>
                     <div class="social-links">
                         <a href="https://www.facebook.com/" target="_blank"><img alt="Facebook-Icon" src="Images/Icons/facebook_2168281.png" class="social-icons"></a>
